fixed overflow problem

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2,6 +2,12 @@
 
 html {
     scroll-behavior: smooth;
+    overflow-x: hidden;
+}
+
+
+body {
+    overflow-x: hidden;
 }
 
 .nav-head {
